tests/evaluator/should_fail/ambiguous_buffer_event1.csp
channel c, d : Bool
channel explode

procTest1 = BUFFER(2, {(c.x, d.true) | x <- Bool})
